Started calculator test program

--- a/kilomp/Makefile
+++ b/kilomp/Makefile
@@ -1,7 +1,12 @@
+# compiler flags
+CXXFLAGS = -O2 -Wall
+# Linker flags
+LDFLAGS = 
+
 fixed_width.hpp:  fixed_width.cpp
 	${CXX} -o fixed_width fixed_width.cpp
 	./fixed_width
 	rm fixed_width
 
-#calc:  calc.cu kilomp.cuh fixed_width.hpp
-#	nvcc -arch=sm_20 -o calc calc.cu
+calc:  calc.cpp kilomp.cuh fixed_width.hpp
+	${CXX} ${CXXFLAGS} -o calc calc.cpp ${LDFLAGS}
