Added test framework for kilomp

--- a/kilomp/Makefile
+++ b/kilomp/Makefile
@@ -2,6 +2,7 @@
 CXXFLAGS = -O2 -Wall
 # Linker flags
 LDFLAGS = 
+GMPLDFLAGS = $(LDFLAGS) -lgmp
 
 fixed_width.hpp:  fixed_width.cpp
 	${CXX} -o fixed_width fixed_width.cpp
@@ -10,3 +11,6 @@ fixed_width.hpp:  fixed_width.cpp
 
 calc:  calc.cpp kilomp.cuh fixed_width.hpp
 	${CXX} ${CXXFLAGS} -o calc calc.cpp ${LDFLAGS}
+
+test:  test.cpp kilomp.cuh fixed_width.hpp
+	${CXX} ${CXXFLAGS} -o test test.cpp ${GMPLDFLAGS}
