Added CUDA-based arithmetic tester

--- a/kilomp/Makefile
+++ b/kilomp/Makefile
@@ -1,5 +1,6 @@
 # compiler flags
 CXXFLAGS = -O2 -Wall
+CUDAFLAGS = -O2 -arch=compute_20 -code=sm_21
 # Linker flags
 LDFLAGS = 
 GMPLDFLAGS = $(LDFLAGS) -lgmp
@@ -16,6 +17,11 @@ test:  test.cpp kilomp.cuh fixed_width.hpp kmp_tests.txt
 	${CXX} ${CXXFLAGS} -o test test.cpp ${GMPLDFLAGS}
 	./test < kmp_tests.txt
 	rm test
+
+test_cuda:  test.cu kilomp.cuh kilomp_cuda.cuh fixed_width.hpp kmp_tests.txt
+	nvcc ${CUDAFLAGS} -o test_cuda test.cu ${GMPLDFLAGS}
+	./test_cuda < kmp_tests.txt
+	rm test_cuda
 
 fuzz:  fuzz.cpp
 	${CXX} ${CXXFLAGS} -o fuzz fuzz.cpp ${GMPLDFLAGS}
